# docs/swagger.yaml
@@ -179,6 +179,17 @@ definitions:
       updatedAt:
         type: string
     type: object
+  dto.UpdateMissionStatusRequest:
+    properties:
+      status:
+        enum:
+        - planned
+        - active
+        - completed
+        type: string
+    required:
+    - status
+    type: object
   dto.UpdateSalaryRequest:
     properties:
       salary:
@@ -514,6 +525,48 @@ paths:
           schema:
             $ref: '#/definitions/dto.ErrorResponse'
       summary: Assign mission to a cat (or unassign with null)
+      tags:
+      - missions
+  /missions/{id}/status:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: Mission ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: new status
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateMissionStatusRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.MissionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Update mission status
       tags:
       - missions
 swagger: "2.0"
